--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "api-platform/core": "^2.6",
         "babdev/pagerfanta-bundle": "^3.0",
         "behat/transliterator": "^1.3",
+        "bitbag/sylius-adyen-plugin": "^2.1",
         "doctrine/collections": "^1.6",
         "doctrine/common": "^3.2",
         "doctrine/dbal": "^2.7 || ^3.0",
