--- a/config/packages/_sylius.yaml
+++ b/config/packages/_sylius.yaml
@@ -7,8 +7,13 @@ imports:
 
     - { resource: "@SyliusApiBundle/Resources/config/app/config.yaml" }
 
+    - { resource: "@BitBagSyliusAdyenPlugin/Resources/config/config.yaml" }
+
 parameters:
     sylius_core.public_dir: '%kernel.project_dir%/public'
+    sylius_refund.supported_gateways:
+        - offline
+        - adyen
 
 sylius_api:
     enabled: true
