--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -2,6 +2,7 @@ parameters:
     env(MONOLOG_STREAM_PATH): '%kernel.logs_dir%/%kernel.environment%.log'
 
 monolog:
+    channels: [adyen]
     handlers:
         main:
             type: fingers_crossed
@@ -11,3 +12,7 @@ monolog:
             type: stream
             path: "%env(resolve:MONOLOG_STREAM_PATH)%"
             level: debug
+        doctrine:
+            type: service
+            channels: [ adyen ]
+            id: bitbag.sylius_adyen_plugin.logging.monolog.doctrine_handler
